@@ -13,6 +13,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #27079: Fixed curses.ascii functions isblank(), iscntrl() and ispunct().
+
 - Issue #26754: Some functions (compile() etc) accepted a filename argument
   encoded as an iterable of integers. Now only strings and byte-like objects
   are accepted.
